# auth_azure_streamlit_python

./: README.md  app.py  auth_utils.py  gitignore  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
pages/: 1_Dashboard.py  2_Reports.py  3_Admin.py
