[project]
name = "streamlit-auth"
version = "0.1.0"
description = "pagina inicial com auth com azure"
authors = [
    {name = "jhonyautogeral",email = "jhonatan.novais@outlook.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.47.1,<2.0.0)",
    "msal (>=1.33.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
